2011-05-03  Richard Guenther  <rguenther@suse.de>

	PR lto/48846
	* lto-streamer-in.c (unpack_ts_decl_common_value_fields):
	Stream decl_common.off_align instead of the derived DECL_OFFSET_ALIGN.
	* lto-streamer-out.c (pack_ts_decl_common_value_fields): Likewise.

2011-05-03  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/48723
	* config/i386/i386.c (ix86_expand_prologue): Do not probe the stack
	for -fstack-check if the size to allocate is negative.

2011-04-30  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48809
	* tree-switch-conversion.c (build_arrays): Compute tidx in unsigned
	type.
	(gen_inbound_check): Don't compute index_expr - range_min in utype
	again, instead reuse SSA_NAME initialized in build_arrays.
	Remove two useless gsi_for_stmt calls.

2011-04-28  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline
	2011-04-01  Andrew Pinski  <pinskia@gmail.com>
	    Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/48262
	* config/rs6000/vector.md (movmisalign<mode>): Allow for memory
	operands, as per the specifications.

	* config/rs6000/altivec.md (vec_extract_evenv4si): Correct modes.
	(vec_extract_evenv4sf): Ditto.
	(vec_extract_evenv8hi): Ditto.
	(vec_extract_evenv16qi): Ditto.
	(vec_extract_oddv4si): Ditto.

2011-04-28  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/48597
	* final.c (final_scan_insn): Call dwarf2out_frame_debug even for
	inline asm.

2011-04-27  Jakub Jelinek  <jakub@redhat.com>

	PR c/48742
	* c-typeck.c (build_binary_op): Don't wrap arguments if
	int_operands is true.

2011-04-26  Jakub Jelinek  <jakub@redhat.com>

	PR debug/48768
	* tree-ssa.c (insert_debug_temp_for_var_def): If degenerate_phi_result
	is error_mark_node, set value to NULL.

	PR tree-optimization/48734
	* tree-ssa-reassoc.c (eliminate_redundant_comparison): Give up
	if return value from maybe_fold_*_comparsions isn't something
	the code is prepared to handle.

2011-04-26  Richard Guenther  <rguenther@suse.de>
